gccida/c2/ggc_set_mark
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_set_mark/src/ggc-page.c:1433:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v1; // r8 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_set_mark/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_set_mark/src/ggc-page.c:1439:27: error: expected expression
v1 = ( *( page_entry_0 ***)( ( char *)G.lookup + ( ( ( unsigned __int64)p >> 21) & 0x7F8)))[( ( unsigned __int64)p >> SLOBYTE( G.lg_pagesize)) & ~( -1 << ( 24 - LOBYTE( G.lg_pagesize)))]; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_set_mark/src/ggc-page.c:1439:11: error: use of undeclared identifier 'page_entry_0'
v1 = ( *( page_entry_0 ***)( ( char *)G.lookup + ( ( ( unsigned __int64)p >> 21) & 0x7F8)))[( ( unsigned __int64)p >> SLOBYTE( G.lg_pagesize)) & ~( -1 << ( 24 - LOBYTE( G.lg_pagesize)))]; 
          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_set_mark/src/ggc-page.c:1440:18: error: 'uint8 *' (aka 'unsigned char *') and 'char *' are not pointers to compatible types
v2 = ( _BYTE *)p - v1->page; 
     ~~~~~~~~~~~ ^ ~~~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ggc_set_mark/src/obj/ggc-page.o] Error 1
